some structure and content

--- a/CV.html
+++ b/CV.html
@@ -9,10 +9,41 @@
 
     <body>
         <header>
-            <nav></nav>
+            <nav role="navigation" id="top"><ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="projects.html"></a></li>
+            </ul></nav>
         </header>
         
+        <section>
+            <article>
+                <h1>Education and interests</h1>
+                <p>
+                    Hi I'm Abdulaziz Al-Otaibi I currently
+                    in my last semester of the computer science program
+                    in King Saud university I into cyber security and 
+                    interested in AI and machine learning.
+                </p>
+            </article>
 
+            <article>
+                <h1>Skills</h1>
+                <p>
+                    I have a good understanding and experience
+                    of the following programming languages:
+                </p>
+                <ul>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>C++</li>
+                    <li>JavaScript</li>
+                </ul>
+            </article>
+            <blockquote><!--inspirational quote--></blockquote>
+        </section>
+        <a href="#top">back to the top</a>
     </body>
 
 </html>
