--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,22 @@
         <meta charset="utf-8">
 
     </head>
-
     <body>
         <header>
-            <nav></nav>
+            <nav role="navigation" id="top"><ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="projects.html"></a></li>
+            </ul></nav>
         </header>
-        
-
+        <h1>Contact me</h1>
+        <form>
+            Name
+            Email
+            Massage
+        </form>
+        <a href="#top">back to the top</a>
     </body>
 
 </html>
