--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,15 @@
 
     <body>
         <header>
-            <nav></nav>
+            <nav role="navigation" id="top"><ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="projects.html"></a></li>
+            </ul></nav>
         </header>
         
-
+        <a href="#top">back to the top</a>
     </body>
 
 </html>
