hompage/index content

--- a/index.html
+++ b/index.html
@@ -29,14 +29,25 @@
                 <main>
                     <h1>about me</h1>
                     <p><!--talk about yourself-->
-                        
+                        Hi this my page using HTML only. though it looks kinda ugly and bland, improvements are on the way. it may take sometime, and there might some ups and downs
+                        but this is only the beginning  I will talk about the improvements in details <a href="#improvements">here</a>. <small> yes I'm supposed to talk about my self</small> <br>
+                        I'm Abdulaziz Sultan Alotaibi I'm currently a university student and in fact Iam in the last semester.<br>
+                        After transfring form the engnineering to Computer Science I got to know some amazing poeple with  a <em>ton</em> and I mean a <em><strong><b>ton</b></strong></em> of experiences and knowledge in different fields
+                        in general of specificaly in Computer Sciences.
+                        Right know I'm packing my stuff to sail into different worlds and hopefully we might cross roads in happy moments.
                     </p>
                     <h2>working personality</h2><!---->
-                    <p></p>
-                    <h2>improvements on this page</h2>
+                    <p>
+                        in general I start with making a plan and execute it. if I don't have any information about what I'm trying to achieve I focus on the plan for information gathering. <br>
+                        though making a plan is essential it is not everything being flexible and knowing how t juggle alot of tasks at the sametime making priorities and postponing nonurgent tasks is very important. 
+                    </p>
+                    <h2 id="improvements">improvements on this page</h2>
                     <div>
                         <dl>
-                            
+                            <dt>adding a custom mouse</dt>
+                            <dd>
+                                I found this feature on this website <a href="https://unicodesolutions.co">unicodesolutions.co</a> essentially it reverese the color of a tiny circle that follow the cursor automatically.<br>
+                            </dd>
                         </dl>
                     </div>
                 </main>
