--- a/CV.html
+++ b/CV.html
@@ -41,7 +41,7 @@
                     <li>JavaScript</li>
                 </ul>
             </article>
-            <blockquote><!--inspirational quote--></blockquote>
+            <blockquote>learning doesn't end when get a certificate</blockquote>
         </section>
         <a href="#top">back to the top</a>
     </body>
