--- a/index.html
+++ b/index.html
@@ -44,14 +44,19 @@
                     <h2 id="improvements">improvements on this page</h2>
                     <div>
                         <dl>
-                            <dt>adding a custom mouse</dt>
+                            <dt>adding a custom cursor</dt>
                             <dd>
                                 I found this feature on this website <a href="https://unicodesolutions.co">unicodesolutions.co</a> essentially it reverese the color of a tiny circle that follow the cursor automatically.<br>
                             </dd>
 
-                            <dt></dt>
+                            <dt>Using CSS</dt>
                             <dd>
-                                
+                                I'm currently learning CSS and I'm planning to use it to make the page more appealing and more interactive.
+                            </dd>
+                            <dt>Adding content</dt>
+                            <dd>
+                                though it is not necessary it is important to add some flavorful content to the page. <br>
+                                pictures background images help.
                             </dd>
                         </dl>
                     </div>
