--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,22 @@
                 <li><a href="projects.html"></a></li>
             </ul></nav>
         </header>
+        <article>
+            <img src="quadratic_congruency.png" alt="quadratic congruency">
+            <p>
+                this project solves quadratic congruencies using euclidean algorithm and find the linear combination
+            </p>
+            <a href="https://github.com/azoozfzhyg/CSC281Project">project source code</a>
         
+        </article>
+            <img src="" alt="">
+            <p>
+                this project solves cryptarithmetic puzzles using backtracking algorithm
+            </p>
+            <a href="https://github.com/Mofj12/CSC361Project">project source code</a>
+        <article>
+
+        </article>
         <a href="#top">back to the top</a>
     </body>
 
