--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="contact.html">Contact me</a></li>
-                <li><a href="projects.html"></a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul></nav>
         </header>
         
