--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="contact.html">Contact me</a></li>
-                <li><a href="projects.html"></a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul></nav>
         </header>
         <h1>Contact me</h1>
-        <p>Email me at <a href="mailto:abdul.bahammam@gmail.com">abdul.bahammam@gmail.com</a></p>
+        <p>Email me at <a href="mailto:azoozfzhy@gmail.com">abdul.bahammam@gmail.com</a></p>
         <p>Or fill out the form below:</p>
         <main>
             <form>
