--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="contact.html">Contact me</a></li>
-                <li><a href="projects.html"></a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul></nav>
         </header>
         <article>
@@ -25,7 +25,7 @@
             <a href="https://github.com/azoozfzhyg/CSC281Project">project source code</a>
         
         </article>
-            <img src="" alt="">
+            <img src="Cryptarithmetic.png" alt="Cryptarithmetic puzzle">
             <p>
                 this project solves cryptarithmetic puzzles using backtracking algorithm
             </p>
