--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
 
         <title>Abdulaziz's | Contact me</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
         <header>
+            <h1 class="header-text">Abdulaziz's website</h1>
             <nav role="navigation" id="top"><ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
@@ -16,7 +18,7 @@
             </ul></nav>
         </header>
         <h1>Contact me</h1>
-        <p>Email me at <a href="mailto:azoozfzhy@gmail.com">abdul.bahammam@gmail.com</a></p>
+        <p>Email me at <a href="mailto:azoozfzhy@gmail.com">azoozfzhy@gmail.com</a></p>
         <p>Or fill out the form below:</p>
         <main>
             <form>
