--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,13 @@
         <title>Abdulaziz's | Projects
         </title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
 
     <body>
         <header>
+            <h1 class="header-text">Abdulaziz's website</h1>
             <nav role="navigation" id="top"><ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
@@ -18,18 +20,18 @@
             </ul></nav>
         </header>
         <article>
-            <img src="quadratic_congruency.png" alt="quadratic congruency">
+            <img src="images/quadratic_congruency.png" alt="quadratic congruency">
             <p>
                 this project solves quadratic congruencies using euclidean algorithm and find the linear combination
             </p>
-            <a href="https://github.com/azoozfzhyg/CSC281Project">project source code</a>
+            <a href="https://github.com/azoozfzhyg/CSC281Project" class="project-link">project source code</a>
         
         </article>
-            <img src="Cryptarithmetic.png" alt="Cryptarithmetic puzzle">
+            <img src="images/Cryptarithmetic.png" alt="Cryptarithmetic puzzle">
             <p>
                 this project solves cryptarithmetic puzzles using backtracking algorithm
             </p>
-            <a href="https://github.com/Mofj12/CSC361Project">project source code</a>
+            <a href="https://github.com/Mofj12/CSC361Project" class="project-link">project source code</a>
         <article>
 
         </article>
