--- a/projects.html
+++ b/projects.html
@@ -5,37 +5,39 @@
         <title>Abdulaziz's | Projects
         </title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
 
     </head>
 
     <body>
-        <header>
-            <h1 class="header-text">Abdulaziz's website</h1>
-            <nav role="navigation" id="top"><ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contact me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul></nav>
-        </header>
-        <article>
-            <img src="images/quadratic_congruency.png" alt="quadratic congruency">
-            <p>
-                this project solves quadratic congruencies using euclidean algorithm and find the linear combination
-            </p>
-            <a href="https://github.com/azoozfzhyg/CSC281Project" class="project-link">project source code</a>
-        
-        </article>
-            <img src="images/Cryptarithmetic.png" alt="Cryptarithmetic puzzle">
-            <p>
-                this project solves cryptarithmetic puzzles using backtracking algorithm
-            </p>
-            <a href="https://github.com/Mofj12/CSC361Project" class="project-link">project source code</a>
-        <article>
+        <div class="center-content">
+            <header>
+                <h1 class="header-text">Abdulaziz's website</h1>
+                <nav role="navigation" id="top"><ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="contact.html">Contact me</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                </ul></nav>
+            </header>
+            <article>
+                <img src="images/quadratic_congruency.png" alt="quadratic congruency">
+                <p>
+                    this project solves quadratic congruencies using euclidean algorithm and find the linear combination
+                </p>
+                <a href="https://github.com/azoozfzhyg/CSC281Project" class="project-link">project source code</a>
+            
+            </article>
+                <img src="images/Cryptarithmetic.png" alt="Cryptarithmetic puzzle">
+                <p>
+                    this project solves cryptarithmetic puzzles using backtracking algorithm
+                </p>
+                <a href="https://github.com/Mofj12/CSC361Project" class="project-link">project source code</a>
+            <article>
 
-        </article>
-        <a href="#top">back to the top</a>
+            </article>
+            <a href="#top">back to the top</a>
+        </div>
     </body>
 
 </html>
